[package]
name = "term_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["compiler/*"]

[dependencies]
term_ast = { path = "compiler/term_ast" }
term_ast_pass = { path = "compiler/term_ast_pass" }
term_common = { path = "compiler/term_common" }
term_core = { path = "compiler/term_core" }
term_diag = { path = "compiler/term_diag" }
term_parse = { path = "compiler/term_parse" }
term_print = { path = "compiler/term_print" }
term_rewrite_csp = { path = "compiler/term_rewrite_csp" }
term_solve = { path = "compiler/term_solve" }

atty = "0.2.4"
clap = { version = "4.3.12", features = ["derive"] }
rustyline = { version = "12.0.0", features = ["derive"] }
peg = "0.8.1"
ustr = "0.10.0"
