[package]
name = "term_ast_pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_ast = { path = "../term_ast" }
term_core = { path = "../term_core" }
term_common = { path = "../term_common" }
term_diag = { path = "../term_diag" }
term_print = { path = "../term_print" }
term_solve = { path = "../term_solve" }

ustr = "0.10.0"
