[package]
name = "term_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_ast = { path = "../term_ast" }
term_common = { path = "../term_common" }
term_diag = { path = "../term_diag" }

peg = "0.8.1"
ustr = "0.10.0"
